[package]
name = "aoc23"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
arrayvec = "0.7.4"
chumsky = "0.9.3"
enum-map = "2.7.3"
inpt = "0.1.3"
itertools = "0.12.0"
ndarray = "0.15.6"
num = "0.4.1"
regex = "1.10.2"
rustc-hash = "1.1.0"
thiserror = "1.0.50"
vecmap-rs = "0.1.12"
vecmath = "1.0.0"
