[package]
name = "aoc23"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
arrayvec = "0.7.4"
chumsky = "0.9.3"
derive_more = "0.99.17"
enum-map = "2.7.3"
fixedbitset = "0.4.2"
graphviz-rust = "0.7.0"
inpt = "0.1.3"
itertools = "0.12.0"
nalgebra = "0.32.3"
ndarray = "0.15.6"
num = "0.4.1"
outils = "0.3.0"
rangetools = "0.1.4"
rayon = "1.8.0"
regex = "1.10.2"
rustc-hash = "1.1.0"
strum = { version = "0.25.0", features = ["derive"] }
thiserror = "1.0.50"
vecmap-rs = "0.1.12"
vecmath = "1.0.0"
winnow = "0.5.30"
